# subtitle-sink

./: .gitignore  README.md  config.cfg  pyproject.toml  subtitle-sink.py
