[tool.poetry]
name = "subtitle-sink"
description = "WIP"
version = "2020.09.23"
authors = ["Jyrno Ader <jyrno42@gmail.com>"]
repository = "https://github.com/jyrno42/subtitle-sink"

[tool.poetry.dependencies]
python = "^3.6"
guessit = "3.1.*"

[tool.poetry.dev-dependencies]
isort = "==4.*"
black = "==20.8b1"

[tool.black]
target-version = ["py36", "py37", "py38"]
include = "\\.pyi?$"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
